--- a/public/index.html
+++ b/public/index.html
@@ -3,52 +3,53 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
 
+    <!-- Primary Theme Color -->
     <meta name="theme-color" content="#000000" />
+
+    <!-- 🔥 Correct Branding -->
+    <title>BookForTravel | Hosted Group Tours & Custom Travel Itineraries</title>
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="BookForTravel offers curated hosted group tours and personalized holiday packages to Vietnam, Thailand, Bali, and Thailand — starting at just ₹49,999!"
     />
+    <meta
+      name="keywords"
+      content="BookForTravel, hosted group tours, Vietnam tours, Bali packages, Thailand holiday, AI trip planner"
+    />
+
+    <!-- 🔥 Social Sharing (WhatsApp, Facebook, LinkedIn, Twitter, etc.) -->
+    <meta property="og:title" content="BookForTravel | Hosted Group Tours & Custom Travel Itineraries" />
+    <meta property="og:description" content="Discover places beyond brochures. Join our hosted group tours to Vietnam, Thailand & Bali — starting at just ₹49,999!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.bookfortravel.com/" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- 🔥 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="BookForTravel | Hosted Group Tours & Custom Travel Itineraries" />
+    <meta name="twitter:description" content="Discover places beyond brochures. Join our hosted group tours to Vietnam, Thailand & Bali — starting at just ₹49,999!" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
+
+    <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+
+    <!-- Manifest -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-
-<script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuEYvLps0iswoW8AC5OxDYAgFW3OwKGRs&libraries=places"
-  async
-  defer
-></script>
-
-
-
-
+    <!-- Google Maps API -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBuEYvLps0iswoW8AC5OxDYAgFW3OwKGRs&libraries=places"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
