--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,12 @@
     />
 
     <!-- 🔥 Social Sharing (WhatsApp, Facebook, LinkedIn, Twitter, etc.) -->
-    <meta property="og:title" content="BookForTravel | Hosted Group Tours & Custom Travel Itineraries" />
-    <meta property="og:description" content="Discover places beyond brochures. Join our hosted group tours to Vietnam, Thailand & Bali — starting at just ₹49,999!" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.bookfortravel.com/" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
+<meta property="og:title" content="BookForTravel | Hosted Group Tours & Custom Travel Itineraries" />
+<meta property="og:description" content="Discover places beyond brochures. Join our hosted group tours to Vietnam, Thailand & Bali — starting at just ₹49,999!" />
+<meta property="og:image" content="https://www.bookfortravel.com/logo512.png" />
+<meta property="og:url" content="https://www.bookfortravel.com/" />
+<meta property="og:type" content="website" />
+
 
     <!-- 🔥 Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
